--- a/themesource/trimm_designsystem/web/components/index.scss
+++ b/themesource/trimm_designsystem/web/components/index.scss
@@ -7,5 +7,5 @@
 @import "./_tooltip.scss";
 @import "./_textarea.scss";
 @import "./_textbox.scss";
-@import "./checkbox.scss";
-@import "./accordion.scss";
+@import "./_checkbox.scss";
+@import "./_accordion.scss";
