--- a/themesource/trimm_designsystem/web/components/_accordion.scss
+++ b/themesource/trimm_designsystem/web/components/_accordion.scss
@@ -33,7 +33,7 @@
     transition: background-color 0.2s ease;
 
     &:hover {
-        background-color: darken($base-white, 5%);
+        background-color: rgba($brand-3, 0.2) !important;
     }
 }
 
